@@ -121,6 +121,7 @@ depth: 1
  * Add changelog and issue tracker links to the PyPI project page (Panagiotis H.M. Issaris)
  * Add better deprecation warnings to the `search.Query` & `search.QueryDailyHits` model, move final set of templates from the admin search module to the search promotions contrib module (LB (Ben) Johnston)
  * Add generic `InspectView` to `ModelViewSet` (Sage Abdullah)
+ * Migrate select all on focus/click behavior to Stimulus, used on the image URL generator (Chiemezuo Akujobi)
 
 
 ## Upgrade considerations - changes affecting all projects
