@@ -79,10 +79,5 @@ $(function () {
     $form.on('change', $.debounce(500, formChangeHandler));
     $form.on('keyup', $.debounce(500, formChangeHandler));
     formChangeHandler();
-
-    // When the user clicks the URL, automatically select the whole thing (for easier copying)
-    $result.on('click', function () {
-      $(this).trigger('select');
-    });
   });
 });
